Issue #3378149 by Moni_10, Mukeysh, djsagar, Indrapatil: Filters icons on table header of content page are not visible for forced colors / high contrast mode

--- a/styles/base/_messages.scss
+++ b/styles/base/_messages.scss
@@ -140,10 +140,6 @@
         mask-image: icon('status');
         mask-repeat: no-repeat;
         mask-position: center left;
-
-        @media (forced-colors: active) {
-          background-color: buttonBorder;
-        }
       }
     }
 
